fix: format and update recipe recommend sql (#48)
* fix: format and update the sql

* fix: implement webcall method

* fix: format update

* fix: correct the path&format the code

---------

Co-authored-by: ZeldaMao <1031235792@qq.com>